[tool.poetry]
name = "tplink2hosts"
version = "0.1.0"
description = "Export /etc/hosts file content from the Clients list of a TP-Link wireless router website"
authors = ["William H. Grover <wgrover@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
